package com.fhostel.model;

public class Receptionniste extends Utilisateur {

    public Receptionniste(String id, String nom, String telephone, String code) {
        super(id, nom, telephone, code);
    }
}